<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.stanley.fleunittest.MainActivity">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="@string/instructions"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/et_WorkDayStart"
        android:hint="@string/workDayStartHint" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/et_WorkDayEnd"
        android:hint="@string/workDayEndHint" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/et_WorkDayMiddle"
        android:hint="@string/workDayMiddayHint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/et_EventName"
        android:hint="@string/enterEventNameHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_EventStart"
        android:inputType="text"
        android:hint="@string/enterEventStartTimeHint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_EventEnd"
        android:inputType="text"
        android:hint="@string/enterEventEndTimeHint" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_addToCalendar"
        android:text="@string/btn_AddToCalendar"
        android:layout_gravity="center"/>


</LinearLayout>
